--- a/MyShop/MyShop.WebUI/Views/ProductManager/Index.cshtml
+++ b/MyShop/MyShop.WebUI/Views/ProductManager/Index.cshtml
@@ -11,6 +11,7 @@
 </p>
 <table class="table">
     <tr>
+        <th></th>
         <th>
             @Html.DisplayNameFor(model => model.Name)
         </th>
@@ -23,14 +24,15 @@
         <th>
             @Html.DisplayNameFor(model => model.Price)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Image)
-        </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
+        <td>
+            <img src="~/Content/ProductImages/@item.Image"
+                 class="img-thumbnail" style="height: 50px"/>
+        </td>
         <td>
             @Html.DisplayFor(modelItem => item.Name)
         </td>
@@ -42,9 +44,6 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Price)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Image)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
