--- a/MyShop/MyShop.WebUI/Views/Home/Details.cshtml
+++ b/MyShop/MyShop.WebUI/Views/Home/Details.cshtml
@@ -36,8 +36,7 @@
             <dt></dt>
 
             <dd>
-                <a class="btn btn-success btn-sm" style="border-radius: 20px;"
-                   href="@Url.Action("AddToBasket", "Basket", new { Id=Model.Id })">
+                <a class="btn btn-success btn-sm" style="border-radius: 20px;">
                     Add to Basket
                 </a>
                 <hr />
