--- a/MyShop/MyShop.WebUI/Views/Home/Details.cshtml
+++ b/MyShop/MyShop.WebUI/Views/Home/Details.cshtml
@@ -36,7 +36,8 @@
             <dt></dt>
 
             <dd>
-                <a class="btn btn-success btn-sm" style="border-radius: 20px;">
+                <a href="@Url.Action("AddToBasket", "Basket", new { Id=Model.Id })"
+                   class="btn btn-success btn-sm" style="border-radius: 20px;">
                     Add to Basket
                 </a>
                 <hr />
