--- a/MyShop/MyShop.WebUI/Views/Home/Index.cshtml
+++ b/MyShop/MyShop.WebUI/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
                 <h4 class="text-danger">$@product.Price</h4>
             </div>
             <div class="col-md-6" style="padding-right: 0;">
-                <a class="btn btn-sm btn-success" style="border-radius: 20px;">
+                <a href="@Url.Action("AddToBasket", "Basket", new { Id=product.Id })" class="btn btn-sm btn-success" style="border-radius: 20px;">
                     Add to Basket
                 </a>
             </div>
