--- a/MyShop/MyShop.WebUI/Views/Basket/Index.cshtml
+++ b/MyShop/MyShop.WebUI/Views/Basket/Index.cshtml
@@ -49,6 +49,7 @@
     <tr>
         <td colspan="4" style="text-align:right"><strong>Basket Total</strong></td>
         <td>@String.Format("{0:c}", (from p in Model select p.Price * p.Quantity).Sum())</td>
+        <td><a class="btn btn-success" href="@Url.Action("CheckOut", "Basket")">Check out items</a></td>
     </tr>
 
 </table>
